@@ -1,3 +1,11 @@
+2006-08-08 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* implemented some stuff to find a good blocksize to use for
+	  copy/move. Actually i'm not really happy with it, because probing
+	  seems suboptimal, but it's better than nothing. As soon as i have
+	  some time i should do some research on the subject to find a better
+	  solution.
+	  
 2006-08-01 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* include/Win_GParted.h,
